--- a/CSS/style.css
+++ b/CSS/style.css
@@ -196,38 +196,6 @@ main > #mesProjets > article > .containerCards > .card > a {
   background-color: #F5D3D4;
   color: #57304F;
 }
-main > #formation {
-  width: 100%;
-  border: 1px solid red;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-main > #formation > .carousel {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-}
-main > #formation > .carousel > .carouselItem {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-  border: 1px solid #57304F;
-}
-main > #formation > .carousel > .carouselItem > img {
-  width: 150px;
-  height: 150px;
-}
-main > #formation > .carousel > .carouselItem.active {
-  opacity: 1;
-}
 main > #onglet {
   width: 400px;
   height: 50px;
@@ -242,6 +210,84 @@ main > #onglet > a {
   color: #5f256f;
   text-align: center;
 }
+main > #formation {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+main > #formation h2, main > #formation li, main > #formation p {
+  color: #F5D3D4;
+}
+main > #formation > #etudesEtDiplomes {
+  width: 30%;
+  height: 200px;
+  border: 5px solid white;
+  display: flex;
+  border-radius: 50%;
+  flex-direction: column;
+  margin-top: 25px;
+  margin-left: 25px;
+  background-color: #57304F;
+  text-align: center;
+  justify-content: center;
+}
+main > #formation > #etudesEtDiplomes > ul {
+  width: 100%;
+  list-style-type: none;
+}
+main > #formation > #etudesEtDiplomes > ul > li {
+  width: 100%;
+  list-style-type: none;
+}
+main > #formation > .carousel {
+  position: relative;
+  width: 25%;
+  height: 200px;
+  overflow: hidden;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 25px;
+}
+main > #formation > .carousel > .carouselItem {
+  position: absolute;
+  top: 25px;
+  left: 0;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  display: flex;
+  justify-content: flex-end;
+}
+main > #formation > .carousel > .carouselItem > img {
+  width: 150px;
+  height: 150px;
+}
+main > #formation > .carousel > .carouselItem.active {
+  opacity: 1;
+}
+main > #formation > #Expro {
+  width: 30%;
+  height: 200px;
+  border: 5px solid white;
+  display: flex;
+  border-radius: 50%;
+  flex-direction: column;
+  margin-top: 25px;
+  margin-left: 25px;
+  background-color: #57304F;
+  text-align: center;
+  justify-content: center;
+}
+main > #formation > div:first-child {
+  align-self: flex-start;
+}
+main > #formation > div:nth-child(2) {
+  align-self: flex-end;
+}
+main > #formation > div:last-child {
+  align-self: flex-start;
+}
 main > #contact {
   width: 100%;
 }
@@ -252,17 +298,17 @@ main > #contact > #titreFormulaire {
   color: #57304F;
 }
 main > #contact > #formulaire {
-  width: 1000px;
+  max-width: 1000px;
   height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 50px auto;
-  background-color: #57304f;
+  background-color: #57304F;
   border-radius: 10px 10px 10px 10px;
 }
 main > #contact > #formulaire > #boite {
-  width: 500px;
+  width: 50%;
   display: flex;
   flex-direction: column;
 }
@@ -351,10 +397,66 @@ main > #contact > #formulaire > #boite > form > #identity > .champ > input {
   padding-left: 10px;
   margin-top: 10px;
 }
-main > #contact > #formulaire > img {
-  width: 500px;
-  height: 100%;
-  border: 1px solid #57304F;
+main > #contact > #formulaire > #reseauxSociaux {
+  width: 50%;
+  border: 1px solid black;
+}
+main > #contact > #formulaire > #reseauxSociaux > #fondImg {
+  position: relative;
+  width: 450px;
+  height: 450px;
+  border-radius: 50%;
+  background-color: #F5D3D4;
+  left: 25px;
+  top: 180px;
+}
+main > #contact > #formulaire > #reseauxSociaux > #fondImg > .rezo {
+  width: 400px;
+  height: 250px;
+  display: flex;
+  margin: 0 auto;
+  padding-top: 15%;
+}
+main > #contact > #formulaire > #reseauxSociaux > #logosSocial {
+  position: absolute;
+  top: 80%;
+  left: 61%;
+  transform: translate(-50%, -50%);
+}
+main > #contact > #formulaire > #reseauxSociaux > #logosSocial > .mediaLogo {
+  position: absolute;
+  transform-origin: bottom center;
+  animation: orbit 10s linear infinite;
+}
+main > #contact > #formulaire > #reseauxSociaux > #logosSocial > .mediaLogo > img {
+  width: 90px;
+  height: 90px;
+}
+@keyframes orbit {
+  from {
+    transform: rotate(0deg) translateY(225px);
+  }
+  to {
+    transform: rotate(360deg) translateY(225px) rotate(-360deg);
+  }
+}
+main > #contact > #formulaire > #reseauxSociaux > #logosSocial .mediaLogo:nth-child(2) {
+  animation-delay: 1s;
+}
+main > #contact > #formulaire > #reseauxSociaux > #logosSocial .mediaLogo:nth-child(3) {
+  animation-delay: 2s;
+}
+main > #contact > #formulaire > #reseauxSociaux > #logosSocial .mediaLogo:nth-child(4) {
+  animation-delay: 3s;
+}
+main > #contact > #formulaire > #reseauxSociaux > #logosSocial .mediaLogo:nth-child(5) {
+  animation-delay: 4s;
+}
+main > #contact > #formulaire > #reseauxSociaux > #logosSocial .mediaLogo:nth-child(6) {
+  animation-delay: 5s;
+}
+main > #contact > #formulaire > #reseauxSociaux > #logosSocial .mediaLogo:nth-child(7) {
+  animation-delay: 6s;
 }
 
 /*....................FOOTER.............................*/
@@ -368,72 +470,10 @@ footer {
 /*....................MEDIA.QUERIES.............................*/
 @media only screen and (min-width: 320px) and (max-width: 600px) and (orientation: portrait) {
   .mainHeaderRes1 {
-    width: 150px;
-    height: 500px;
-    margin-left: 25px;
-    margin-top: 250px;
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .mainHeaderRes1 > #logo {
-    width: 150px;
-    height: 100px;
-    background-color: #f5d3d4;
-    display: flex;
-    justify-content: center;
-  }
-  .mainHeaderRes1 > #logo > a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #fff;
-  }
-  .mainHeaderRes1 > #logo > a > img {
-    width: 68px;
-    height: 68px;
-    border: 1px solid #00d4e0;
-    border-radius: 100px;
-    background-color: #57304f;
-  }
-  .mainHeaderRes1 > nav {
-    width: 150px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f5d3d4;
-  }
-  .mainHeaderRes1 > nav > ul {
-    width: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    list-style-type: none;
-  }
-  .mainHeaderRes1 > nav > ul > li {
-    width: 69px;
-    height: 69px;
-    border: 1px solid #00d4e0;
-    background-color: #57304f;
-    border-radius: 100px;
-    margin: 10px auto;
-  }
-  .mainHeaderRes1 > nav > ul > li > a {
-    width: 70px;
-    height: 70px;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    color: #00d4e0;
-    font-size: 0.8rem;
+    justify-content: space-between;
   }
   /*....................SECTION.............................*/
-  section {
-    width: 250px;
-    position: absolute;
-    margin-left: 200px;
-    margin-top: 25px;
-  }
 }/*# sourceMappingURL=style.css.map */
