--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -277,14 +277,56 @@ main {
     }
   }
 
+  &>#onglet {
+    width: 400px;
+    height: 50px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+
+    &>a {
+      width: 50%;
+      color: #5f256f;
+      text-align: center;
+    }
+  }
+
   &>#formation {
     width: 100%;
-    border: 1px solid red;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    
+    h2, li, p{
+      color: #F5D3D4;
+    }
+
+    &>#etudesEtDiplomes{
+      width: 30%;
+      height: 200px;
+      border: 5px solid white;
+      display: flex;
+      border-radius: 50%;
+      flex-direction: column;
+      margin-top: 25px;
+      margin-left: 25px;
+      background-color: #57304F;
+      text-align: center;
+      justify-content: center;
+
+      &>ul{
+        width: 100%;
+        list-style-type: none;
+        
+        &>li{
+          width: 100%;
+          list-style-type: none;
+        }
+      }
+    }
 
 
 
@@ -292,21 +334,26 @@ main {
 
     &>.carousel {
       position: relative;
-      width: 200px;
+      width: 25%;
       height: 200px;
       overflow: hidden;
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 25px;
+
       
       
 
       &>.carouselItem {
         position: absolute;
-        top: 0;
+        top: 25px;
         left: 0;
         width: 100%;
-        height: 100%;
         opacity: 0;
         transition: opacity 0.5s ease-in-out;
-        border: 1px solid #57304F;
+        
+        display: flex;
+        justify-content: flex-end;
 
         &>img{
           width: 150px;
@@ -325,25 +372,35 @@ main {
       
     }
 
-
-  }
-
-  &>#onglet {
-    width: 400px;
-    height: 50px;
-    margin: 0 auto;
+    &>#Expro{
+      width: 30%;
+    height: 200px;
+    border: 5px solid white;
     display: flex;
-    flex-direction: row;
+    border-radius: 50%;
+    flex-direction: column;
+    margin-top: 25px;
+    margin-left: 25px;
+    background-color: #57304F;
+    text-align: center;
     justify-content: center;
-    align-items: center;
-
-
-    &>a {
-      width: 50%;
-      color: #5f256f;
-      text-align: center;
     }
+
+
   }
+
+  &>#formation > div:first-child {
+    align-self: flex-start;
+  }
+  
+  &>#formation > div:nth-child(2) {
+    align-self: flex-end;
+  }
+  
+  &>#formation > div:last-child {
+    align-self: flex-start;
+  }
+  
 
   &>#contact {
     width: 100%;
@@ -356,18 +413,19 @@ main {
     }
 
     &>#formulaire {
-      width: 1000px;
+      max-width: 1000px;
+      //width: 50%;
       height: 100%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       margin: 50px auto;
-      background-color: #57304f;
+      background-color: #57304F;
       //box-shadow: 0 0 40px 30px #57304F;
       border-radius: 10px 10px 10px 10px;
 
       &>#boite {
-        width: 500px;
+        width: 50%;
         display: flex;
         flex-direction: column;
 
@@ -481,15 +539,97 @@ main {
 
       }
 
-      &>img {
-        width: 500px;
-        height: 100%;
-        border: 1px solid #57304F;
+      &>#reseauxSociaux{
+        width: 50%;
+        border: 1px solid black;
+
+          &>#fondImg{
+            position: relative;
+            width: 450px;
+            height: 450px;
+            border-radius: 50%;
+            background-color: #F5D3D4;
+            left: 25px;
+            top: 180px;
+
+              &>.rezo {
+                width: 400px;
+                height: 250px;
+                display: flex;
+                margin: 0 auto;
+                padding-top: 15%;
+                
+      
+              }
+
+          }
+
+        
+
+        &>#logosSocial{
+          position: absolute;
+          top: 80%;
+          left: 61%;
+          transform: translate(-50%, -50%);
+
+          &>.mediaLogo {
+          
+            position: absolute;
+            transform-origin: bottom center;
+            animation: orbit 10s linear infinite;
+
+            &>img{
+              width: 90px;
+              height: 90px;
+            }
+          }
+
+          
+
+          @keyframes orbit {
+            from {
+              transform: rotate(0deg) translateY(225px);
+            }
+            to {
+              transform: rotate(360deg) translateY(225px) rotate(-360deg);
+            }
+          }
+          
+          .mediaLogo:nth-child(2) {
+            animation-delay: 1s;
+          }
+          
+          .mediaLogo:nth-child(3) {
+            animation-delay: 2s;
+          }
+
+          .mediaLogo:nth-child(4) {
+            animation-delay: 3s;
+          }
+
+          .mediaLogo:nth-child(5) {
+            animation-delay: 4s;
+          }
+
+          .mediaLogo:nth-child(6) {
+            animation-delay: 5s;
+          }
+
+          .mediaLogo:nth-child(7) {
+            animation-delay: 6s;
+          }
+        }
+
+
       }
+
+      
 
 
 
     }
+
+
   }
 }
 
@@ -507,79 +647,43 @@ footer {
 
 @media only screen and (min-width: 320px) and (max-width: 600px) and (orientation: portrait) {
   .mainHeaderRes1 {
-    width: 150px;
-    height: 500px;
-    margin-left: 25px;
-    margin-top: 250px;
-    position: fixed;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-
-
-
-
-
+    flex-direction: row;
+    justify-content: space-between;
+    
+    
     &>#logo {
-      width: 150px;
-      height: 100px;
-      background-color: #f5d3d4;
-      display: flex;
-      justify-content: center;
+      
 
 
 
 
       &>a {
-        display: flex;
-        align-items: center;
-        text-decoration: none;
-        color: #fff;
+        
 
         &>img {
-          width: 68px;
-          height: 68px;
-          border: 1px solid #00d4e0;
-          border-radius: 100px;
-          background-color: #57304f;
+          
 
         }
       }
     }
 
     &>nav {
-      width: 150px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: #f5d3d4;
+      
 
       &>ul {
-        width: 100px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        list-style-type: none;
+        
 
         &>li {
-          width: 69px;
-          height: 69px;
-          border: 1px solid #00d4e0;
-          background-color: #57304f;
-          border-radius: 100px;
-          margin: 10px auto;
+          
 
 
           &>a {
-            width: 70px;
-            height: 70px;
-            display: flex;
-            flex-direction: row;
+            
+            
 
-            justify-content: center;
-            align-items: center;
-            color: #00d4e0;
-            font-size: 0.8rem;
+            
 
           }
         }
@@ -591,10 +695,7 @@ footer {
 
   /*....................SECTION.............................*/
   section {
-    width: 250px;
-    position: absolute;
-    margin-left: 200px;
-    margin-top: 25px;
+    
 
   }
 
