dbut css et responsive

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -470,10 +470,20 @@ footer {
 /*....................MEDIA.QUERIES.............................*/
 @media only screen and (min-width: 320px) and (max-width: 600px) and (orientation: portrait) {
   .mainHeaderRes1 {
+    max-width: 600px;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    margin-left: 50%;
+    margin-top: 25px;
+    border: none;
   }
   /*....................SECTION.............................*/
+  main {
+    max-width: 600px;
+    width: 100%;
+    border: 1px solid black;
+  }
+  main > #presentation {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
