--- a/view/homepage.html.twig
+++ b/view/homepage.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block header %}
-	{% include '../squelette/header.html.twig' %}
+	{% include 'header.html.twig' %}
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
 
         <div id="bienvenue" >
             
-            <img src="./IMG/imgPresentation.png" title="message de bienvenue">
+            <img src="./asset/media/images/imgPresentation.png" title="message de bienvenue">
             <h1>BIENVENUE SUR MON PORTFOLIO!!!!</h1>
             <p>Je m’appelle Dimitri je suis développeur Web et Web mobile. Je vous invite à venir découvrir mes éxperience, mon travail et mes projets.</p>
 
@@ -47,7 +47,7 @@
                 <legend>Qu'est ce qui me caractérise ?</legend>
                 <div id="reponse3">
                     <p>
-                        Je sais lassé mes chaussures et compter deux par deux . je suis grand comme ça . je mange tout a la cantine et je finirai bien par trouver un truc a mettre içi quand l'inspiration viendra.
+                        Ma bonne humeur, ma volonté d'apprendre et découvrir. J'aime m'investir dans différent projets avec des personnes motivées et motivante. 
                     </p>
 
                 </div>    
@@ -57,7 +57,7 @@
                 <legend>Quels sont mes Gouts ?</legend>
                 <div id="reponse4">
                     <p>
-                        J'aime <span>la chouffe!!!!!!</span> hum hum... pardon je m'emballe. Alors heu... j'aime bien les jeux videos, les mangas, le rythm'n blues, la musique en general avec ou sans paroles. J'aime sortir faire du paintball, du carting, aller au cinéma, boire une bonne bière. je préfere l'été a cause de la chaleur et du retour des BBQ.
+                        J'aime bien les jeux videos, les mangas, le rythm'n blues, la musique en general avec ou sans paroles. J'aime sortir faire du paintball, du carting, aller au cinéma, boire une bonne bière. je préfere l'été à cause de la chaleur et du retour des BBQ.
                     </p>
 
                 </div>    
