--- a/asset/CSS/style.scss
+++ b/asset/CSS/style.scss
@@ -17,10 +17,10 @@ a {
 
 body {
   background-color: #F5D3D4;
-  width: 100%;
+
 }
 
-//a retirer en fin de css pour des soucis de coherence
+/*header*/
 .mainHeader {
 
   width: 100%;
@@ -94,6 +94,7 @@ main {
 
   width: 100%;
 
+  /*accueil*/
   &>#presentation {
     width: 100%;
 
@@ -277,133 +278,131 @@ main {
     }
   }
 
-  &>#onglet {
-    width: 400px;
-    height: 50px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
 
-
-    &>a {
-      width: 50%;
-      color: #5f256f;
-      text-align: center;
-    }
-  }
 
   &>#formation {
     width: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    
-    h2, li, p{
-      color: #F5D3D4;
-    }
 
-    &>#etudesEtDiplomes{
-      width: 30%;
-      height: 200px;
-      border: 5px solid white;
+    &>#groupstyle {
       display: flex;
-      border-radius: 50%;
-      flex-direction: column;
-      margin-top: 25px;
-      margin-left: 25px;
-      background-color: #57304F;
-      text-align: center;
-      justify-content: center;
+      flex-direction: row;
+      justify-content: space-around;
+      padding: 25px;
 
-      &>ul{
-        width: 100%;
-        list-style-type: none;
+      &>#etudesEtDiplomes {
+        width: 40%;
+        border: 5px solid white;
+        display: flex;
+        border-radius: 50%;
+        flex-direction: column;
+        background-color: #57304F;
+        text-align: center;
+        justify-content: center;
+        color: #F5D3D4;
         
-        &>li{
-          width: 100%;
+
+        &>h2 {
+          padding: 5px;
+          text-align: center;
+
+        }
+
+        &>ul {
+        
           list-style-type: none;
+          margin: 15px auto;
+          text-align: start;
+
+          &>li {
+            
+            list-style-type: none;
+            padding-left: 20px;
+          }
         }
       }
-    }
 
+      &>#Expro {
+        width: 40%;
+        border: 5px solid white;
+        display: flex;
+        border-radius: 50%;
+        flex-direction: column;
+        background-color: #57304F;
+        text-align: center;
+        justify-content: center;
+        color: #F5D3D4;
 
+        &>h2 {
+          padding: 5px;
+          text-align: center;
 
-
-
-    &>.carousel {
-      position: relative;
-  width: 25%;
-  height: 200px;
-  overflow: hidden;
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 25px;
-
-      
-      
-
-      &>.carouselItem {
-        position: absolute;
-    top: 20px;
-    left: 0;
-    width: 50%;
-    height: 250px;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-
-        &>img{
-          width: 150px;
-          height: 150px;
-          display: flex;
-          justify-content: center;
         }
 
-        
-
+        &>p{
+          white-space: pre-line;
+        }
       }
 
-      &>.carouselItem.active{
-        opacity: 1;
-      }
-
-
-      
-    }
-
-    &>#Expro{
-      width: 30%;
-    height: 200px;
-    border: 5px solid white;
-    display: flex;
-    border-radius: 50%;
-    flex-direction: column;
-    margin-top: 25px;
-    margin-left: 25px;
-    background-color: #57304F;
-    text-align: center;
-    justify-content: center;
     }
 
 
+
+
+
+
+    // &>.carousel {
+    //   position: relative;
+    //   width: 25%;
+    //   height: 200px;
+    //   overflow: hidden;
+    //   display: flex;
+    //   justify-content: flex-end;
+    //   margin-top: 25px;
+
+
+
+
+    //   &>.carouselItem {
+    //     position: absolute;
+    //     top: 20px;
+    //     left: 0;
+    //     width: 50%;
+    //     height: 250px;
+    //     opacity: 0;
+    //     transition: opacity 0.5s ease-in-out;
+    //     border: 1px solid black;
+    //     display: flex;
+    //     justify-content: center;
+
+    //     &>img {
+    //       width: 150px;
+    //       height: 150px;
+    //       display: flex;
+    //       justify-content: center;
+    //     }
+
+
+
+    //   }
+
+    //   &>.carouselItem.active {
+    //     opacity: 1;
+    //   }
+
+
+
+    // }
+
+
+
+
   }
 
-  &>#formation > div:first-child {
-    align-self: flex-start;
-  }
-  
-  &>#formation > div:nth-child(2) {
-    align-self: flex-end;
-  }
-  
-  &>#formation > div:last-child {
-    align-self: flex-start;
-  }
-  
+
+
 
   &>#contact {
     width: 100%;
@@ -542,66 +541,67 @@ main {
 
       }
 
-      &>#reseauxSociaux{
+      &>#reseauxSociaux {
         width: 50%;
         border: 1px solid black;
 
-          &>#fondImg{
-            position: relative;
-            width: 450px;
-            height: 450px;
-            border-radius: 50%;
-            background-color: #F5D3D4;
-            left: 25px;
-            top: 180px;
+        &>#fondImg {
+          position: relative;
+          width: 450px;
+          height: 450px;
+          border-radius: 50%;
+          background-color: #F5D3D4;
+          left: 25px;
+          top: 180px;
 
-              &>.rezo {
-                width: 400px;
-                height: 250px;
-                display: flex;
-                margin: 0 auto;
-                padding-top: 15%;
-                
-      
-              }
+          &>.rezo {
+            width: 400px;
+            height: 250px;
+            display: flex;
+            margin: 0 auto;
+            padding-top: 15%;
+
 
           }
 
-        
+        }
 
-        &>#logosSocial{
+
+
+        &>#logosSocial {
           position: absolute;
           top: 80%;
           left: 61%;
           transform: translate(-50%, -50%);
 
           &>.mediaLogo {
-          
+
             position: absolute;
             transform-origin: bottom center;
             animation: orbit 10s linear infinite;
 
-            &>img{
+            &>img {
               width: 90px;
               height: 90px;
             }
           }
 
-          
+
 
           @keyframes orbit {
             from {
               transform: rotate(0deg) translateY(225px);
             }
+
             to {
               transform: rotate(360deg) translateY(225px) rotate(-360deg);
             }
           }
-          
+
           .mediaLogo:nth-child(2) {
             animation-delay: 1s;
           }
-          
+
           .mediaLogo:nth-child(3) {
             animation-delay: 2s;
           }
@@ -626,7 +626,7 @@ main {
 
       }
 
-      
+
 
 
 
@@ -634,6 +634,7 @@ main {
 
 
   }
+
 }
 
 /*....................FOOTER.............................*/
@@ -656,28 +657,28 @@ footer {
     margin-left: 50%;
     margin-top: 25px;
     border: none;
-    
-    
 
-    
+
+
+
 
 
   }
 
   /*....................SECTION.............................*/
-  main{
+  main {
     max-width: 600px;
     width: 100%;
     border: 1px solid black;
 
-    &>#presentation{
-      
-    width: 100%;
+    &>#presentation {
+
+      width: 100%;
 
     }
 
   }
-  
+
 
 }
 
