--- a/CSS/style.css
+++ b/CSS/style.css
@@ -286,22 +286,44 @@ main > #formation > .arcade-menu > #date-list > li.highlight {
 main > #formation > .arcade-menu .controls {
   display: flex;
 }
-main > #formation > .arcade-menu .controls button {
+main > #formation > .arcade-menu .controls #prev-btn {
+  background-color: #800000;
+  border-radius: 100px;
   width: 50px;
   height: 50px;
-  border-radius: 100px;
-  border: 0;
-  margin: 15px;
   cursor: pointer;
-}
-main > #formation > .arcade-menu .controls #prev-btn {
-  background-color: blue;
+  border: 0;
+  margin: 5px;
 }
 main > #formation > .arcade-menu .controls #next-btn {
-  background-color: blue;
+  background-color: #800000;
+  border-radius: 100px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  border: 0;
+  margin: 5px;
 }
 main > #formation > .arcade-menu .controls #select-btn {
-  background-color: green;
+  background-color: #D3D3D3;
+  transform: rotate(-45deg);
+  height: 25px;
+  border: 0;
+  margin: 5px;
+  cursor: pointer;
+  border-radius: 50px;
+  width: 50px;
+  margin: 20px 5px 5px 5px;
+}
+main > #formation > .arcade-menu .controls #game-btn {
+  background-color: #D3D3D3;
+  transform: rotate(-45deg);
+  cursor: pointer;
+  border: 0;
+  margin: 20px 5px 5px 5px;
+  height: 25px;
+  border-radius: 50px;
+  width: 50px;
 }
 main > #formation > .arcade-menu #popup-content {
   display: none;
