--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -428,30 +428,51 @@ main {
       
 
 
-        button {
-          width: 50px;
-          height: 50px;
-          border-radius: 100px;
-          border: 0;
-          margin: 15px;
-         
-
-
-          cursor: pointer;
-        }
 
         #prev-btn {
-          background-color: blue;
+          background-color: #800000;
+          border-radius: 100px;
+          width: 50px;
+          height: 50px;
+          cursor: pointer;
           
+          border: 0;
+          margin: 5px;
         }
 
         #next-btn {
-          background-color: blue;
-         
+          background-color: #800000;
+          border-radius: 100px;
+          width: 50px;
+          height: 50px;
+          cursor: pointer;
+          border: 0;
+          margin: 5px;
         }
 
         #select-btn {
-          background-color: green;
+          background-color: #D3D3D3;
+          transform: rotate(-45deg);
+          height: 25px;
+          border: 0;
+          margin: 5px;
+          cursor: pointer;
+          border-radius: 50px;
+          width: 50px;
+          margin: 20px 5px 5px 5px;
+          
+         
+        }
+
+        #game-btn {
+          background-color: #D3D3D3;
+          transform: rotate(-45deg);
+          cursor: pointer;
+          border: 0;
+          margin: 20px 5px 5px 5px;
+          height: 25px;
+          border-radius: 50px;
+          width: 50px;
          
         }
       }
