--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -26,7 +26,7 @@ body {
 //a retirer en fin de css pour des soucis de coherence
 .mainHeader {
 
-  width: 100%;
+  
   height: 250px;
   display: flex;
   justify-content: space-between;
@@ -97,70 +97,54 @@ main {
   display: flex;
   margin: 0 auto;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   &>#presentation {
     width: 100%;
 
     &>#bienvenue {
 
-
+      background-image: url(./imgPresentation.png);
+      background-repeat: no-repeat;
       display: flex;
-      flex-direction: column;
+     
       margin: 0 auto;
-
-
-
-      &>img {
-
+      width: 50%;
+      height: 500px;
+      
+      &>#boxtext{
+        // width: 50%;
+        height: 500px;
         display: flex;
-        margin: 0 auto;
-        // position: relative;
+        flex-direction: column;
+        margin: 100px auto;
 
-
-
+        &>h1 {
+          width: 300px;
+          font-size: 1rem;
+          display: flex;
+          
+          margin: 10px auto;
+          text-align: center;
+          padding: 5px;
+         color: #F5D3D4;
+          
+        }
+  
+        &>p {
+          width: 300px;
+          font-size: 1rem;
+          text-align: center;
+          color: #F5D3D4;
+          display: flex;
+          margin: 0 auto;
+          // padding: 5px;
+        } 
       }
 
-      &>h1 {
-        width: 400px;
-        font-size: 1rem;
-        margin: 0 auto;
-        // position: absolute;
-        text-align: center;
 
-        // color: #F5D3D4;
-        color: black;
-      }
 
-      &>p {
-        width: 350px;
-        font-size: 1rem;
-        position: absolute;
-        text-align: center;
-        margin-top: 200px;
-        margin-left: 570px;
-        color: #F5D3D4;
-      }
+      
+
+      
 
     }
 
@@ -244,34 +228,183 @@ main {
 
   }
 
+  &>#formation {
+    width: 100%;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #000;
+    
+
+    &>#bandit-manchot-before {
+
+      display: flex;
+      width: 300px;
+      height: 100%;
+      border-right: 3px solid gold;
+
+    }
+
+    &>#bandit-manchot-after {
+
+      display: flex;
+      width: 300px;
+      height: 100%;
+      border-left: 3px solid gold;
+
+    }
+
+    &>.arcade-menu {
+      position: relative;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      z-index: 0;
+       
+      &>#backgroundVideo {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+        pointer-events: none; 
+        
+      }
+
+      &>#date-list {
+        width: 100%;
+        list-style-type: none;
+        //margin: 10px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-items: center;
+        
+        &>li {
+          max-width: 30%;
+          margin: 30px;
+          flex: 1 0 30%; // Permet de définir trois éléments par ligne
+          color: violet;
+
+          &.highlight {
+            border: 2px solid violet;
+
+          }
+        }
+      }
+
+      .controls {
+        display: flex;
+      
+        #prev-btn {
+          background-color: #800000;
+          border-radius: 100px;
+          width: 25px;
+          height: 25px;
+          cursor: pointer;
+          border: 0;
+          margin: 5px;
+        }
+
+        #next-btn {
+          background-color: #800000;
+          border-radius: 100px;
+          width: 25px;
+          height: 25px;
+          cursor: pointer;
+          border: 0;
+          margin: 5px;
+        }
+
+        #select-btn {
+          background-color: #D3D3D3;
+          transform: rotate(-45deg);
+          height: 25px;
+          border: 0;
+          margin: -5px 5px;
+          cursor: pointer;
+          border-radius: 50px;
+          width: 50px;
+          
+          
+         
+        }
+
+        #game-btn {
+          background-color: #D3D3D3;
+          transform: rotate(-45deg);
+          cursor: pointer;
+          border: 0;
+          margin: -5px 5px ;
+          height: 25px;
+          border-radius: 50px;
+          width: 50px;
+         
+        }
+      }
+
+      #popup-content {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        color: #000;
+        padding: 20px;
+        border: 2px solid #000;
+
+        .close-btn {
+          width: 50px;
+          height: 50px;
+          background-color: red;
+          border-radius: 100px;
+          float: right;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: 0;
+
+        }
+      }
+    }
+  }
 
   &>#mesProjets {
-    width: 100%;
+    
 
     &>article {
-      width: 100%;
+      
 
       &>.containerCards {
-        width: 100%;
+        // width: 100%;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        margin-top: 150px;
+        margin-top: 50px;
+        flex: 1 0 30%;
 
 
         &>.card {
-          width: 400px;
+          max-width: 350px;
+          width: 100%;
           background-color: #57304F;
           display: flex;
           flex-direction: column;
           align-items: center;
           border-radius: 25px;
-          margin-bottom: 50px;
-          position: relative;
+          margin: 25px;
+          //position: relative;
 
           &>img {
-            width: 400px;
+            width: 350px;
             height: 200px;
           }
 
@@ -283,6 +416,7 @@ main {
           }
 
           &>h2 {
+            width: 300px;
             margin-top: 10px;
             color: #F5D3D4;
             font-size: 2.0rem;
@@ -291,7 +425,7 @@ main {
 
           &>p {
 
-            width: 398px;
+            width: 348px;
             height: 90px;
             margin-top: 10px;
             background-color: #F5D3D4;
@@ -342,264 +476,7 @@ main {
     }
   }
 
-  &>#formation {
-    width: 100%;
-    margin: 50px auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #000;
-    
-
-    &>#bandit-manchot-before {
-
-      display: flex;
-      width: 300px;
-      height: 100%;
-      border-right: 3px solid gold;
-
-    }
-
-    &>#bandit-manchot-after {
-
-      display: flex;
-      width: 300px;
-      height: 100%;
-      border-left: 3px solid gold;
-
-    }
-
-    
-
-    &>.arcade-menu {
-      position: relative;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      z-index: 0;
-       
-      &>#backgroundVideo {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: -1;
-        pointer-events: none; 
-        
-      }
-
-      &>#date-list {
-        width: 100%;
-        list-style-type: none;
-        //margin: 10px;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        align-items: center;
-        
-
-
-
-        &>li {
-          max-width: 30%;
-          margin: 30px;
-
-
-          flex: 1 0 30%; // Permet de définir trois éléments par ligne
-          color: violet;
-
-
-
-          &.highlight {
-
-
-            border: 2px solid violet;
-
-          }
-        }
-      }
-
-      .controls {
-        display: flex;
-      
-
-
-
-        #prev-btn {
-          background-color: #800000;
-          border-radius: 100px;
-          width: 50px;
-          height: 50px;
-          cursor: pointer;
-          
-          border: 0;
-          margin: 5px;
-        }
-
-        #next-btn {
-          background-color: #800000;
-          border-radius: 100px;
-          width: 50px;
-          height: 50px;
-          cursor: pointer;
-          border: 0;
-          margin: 5px;
-        }
-
-        #select-btn {
-          background-color: #D3D3D3;
-          transform: rotate(-45deg);
-          height: 25px;
-          border: 0;
-          margin: 5px;
-          cursor: pointer;
-          border-radius: 50px;
-          width: 50px;
-          margin: 20px 5px 5px 5px;
-          
-         
-        }
-
-        #game-btn {
-          background-color: #D3D3D3;
-          transform: rotate(-45deg);
-          cursor: pointer;
-          border: 0;
-          margin: 20px 5px 5px 5px;
-          height: 25px;
-          border-radius: 50px;
-          width: 50px;
-         
-        }
-      }
-
-      #popup-content {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        color: #000;
-        padding: 20px;
-        border: 2px solid #000;
-
-        .close-btn {
-          width: 50px;
-          height: 50px;
-          background-color: red;
-          border-radius: 100px;
-          float: right;
-          cursor: pointer;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          border: 0;
-
-        }
-      }
-    }
-
-
-
-
-
-
-
-    h2,
-    li,
-    p {
-      color: #F5D3D4;
-    }
-
-    &>#etudesEtDiplomes {
-      width: 30%;
-      height: 200px;
-      border: 5px solid white;
-      display: flex;
-      border-radius: 50%;
-      flex-direction: column;
-      margin-top: 25px;
-      margin-left: 25px;
-      background-color: #57304F;
-      text-align: center;
-      justify-content: center;
-
-      &>ul {
-        width: 100%;
-        list-style-type: none;
-
-        &>li {
-          width: 100%;
-          list-style-type: none;
-        }
-      }
-    }
-
-
-
-
-
-    &>.carousel {
-      position: relative;
-      width: 50%;
-      height: 200px;
-      overflow: hidden;
-      display: flex;
-      justify-content: flex-end;
-      margin-top: 25px;
-
-
-
-
-      &>.carouselItem {
-        position: absolute;
-        top: 25px;
-        left: 0;
-        width: 100%;
-        opacity: 0;
-        transition: opacity 0.5s ease-in-out;
-
-        display: flex;
-        justify-content: flex-end;
-
-        &>img {
-          width: 150px;
-          height: 150px;
-        }
-
-
-
-      }
-
-      &>.carouselItem.active {
-        opacity: 1;
-      }
-
-
-
-    }
-
-    &>#Expro {
-      width: 30%;
-      height: 200px;
-      border: 5px solid white;
-      display: flex;
-      border-radius: 50%;
-      flex-direction: column;
-      margin-top: 25px;
-      margin-left: 25px;
-      background-color: #57304F;
-      text-align: center;
-      justify-content: center;
-    }
-
-
-  }
+  
 
 
 
