--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -25,9 +25,7 @@ body {
 
 //a retirer en fin de css pour des soucis de coherence
 .mainHeader {
-
   
-  height: 250px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -37,15 +35,15 @@ body {
 
 
   &>#logo {
-    width: 400px;
+    
 
 
     &>a {
-      width: 400px;
+      
 
       &>img {
         width: 200px;
-        height: 200px;
+        // height: 200px;
       }
     }
 
@@ -233,22 +231,24 @@ main {
     margin: 50px auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    background-color: #000;
+    background-color:#000 ;
     
 
     &>#bandit-manchot-before {
 
       display: flex;
+    
       width: 300px;
       height: 100%;
       border-right: 3px solid gold;
+      
 
     }
 
     &>#bandit-manchot-after {
-
+     
       display: flex;
       width: 300px;
       height: 100%;
@@ -383,7 +383,7 @@ main {
       
 
       &>.containerCards {
-        // width: 100%;
+        
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -401,7 +401,14 @@ main {
           align-items: center;
           border-radius: 25px;
           margin: 25px;
-          //position: relative;
+          
+          &>.languages{
+
+            &>img{
+              width: 25px;
+              height: 25px;
+            }
+          }
 
           &>img {
             width: 350px;
@@ -459,22 +466,22 @@ main {
     }
   }
 
-  &>#onglet {
-    width: 400px;
-    height: 50px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  // &>#onglet {
+  //   width: 400px;
+  //   height: 50px;
+  //   margin: 0 auto;
+  //   display: flex;
+  //   flex-direction: row;
+  //   justify-content: center;
+  //   align-items: center;
 
 
-    &>a {
-      width: 50%;
-      color: #5f256f;
-      text-align: center;
-    }
-  }
+  //   &>a {
+  //     width: 50%;
+  //     color: #5f256f;
+  //     text-align: center;
+  //   }
+  // }
 
   
 
